@@ -3,8 +3,9 @@ Makefile.PL
 MANIFEST
 lib/Ogg/Vorbis/Header/PurePerl.pm
 README
-test.pl
-test.ogg
+t/01-require.t
+t/02-basic.t
+t/test.ogg
 examples/ogginfo.pl
 LICENSE.GPL
 META.yml                                 Module meta-data (added by MakeMaker)
