@@ -7,28 +7,27 @@
 
 # change 'tests => 1' to 'tests => last_test_to_print';
 
-use Test::More tests => 9;
-
-BEGIN { use_ok('Ogg::Vorbis::Header::PurePerl') }
+use Test::More tests => 8;
+use Ogg::Vorbis::Header::PurePerl;
 
 #########################
 
 # See if partial load works
-ok(my $ogg = Ogg::Vorbis::Header::PurePerl->new('test.ogg'));
+ok(my $ogg = Ogg::Vorbis::Header::PurePerl->new('t/test.ogg'));
 
 # Try all the routines
 ok($ogg->info->{'rate'} == 44100);
 ok($ogg->comment_tags);
-ok(@{$ogg->comment('artist')}->[0] == 'maloi');
+ok($ogg->comment('artist')->[0] == 'maloi');
 
 $ogg = 0;
 
 # See if full load works
-ok(my $ogg = Ogg::Vorbis::Header::PurePerl->new('test.ogg'));
-ok(@{$ogg->comment('artist')}->[0] == 'maloi');
+ok(my $ogg = Ogg::Vorbis::Header::PurePerl->new('t/test.ogg'));
+ok($ogg->comment('artist')->[0] == 'maloi');
 
 # and see if we can get comments including the '=' character
-ok(@{$ogg->comment('album')}->[0] == 'this=that');
+ok($ogg->comment('album')->[0] == 'this=that');
 
 # Make sure we're getting the right track length
 ok($ogg->info->{'length'} == 0);
